log
Tue Mar 30 16:28:54 UTC 2021: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:32:6: error: ‘list’ undeclared (first use in this function); did you mean ‘List’?
      list->head=NULL;
      ^~~~
      List
list.c:32:6: note: each undeclared identifier is reported only once for each function it appears in
list.c:36:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
Tue Mar 30 16:37:21 UTC 2021: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:32:10: error: invalid type argument of ‘->’ (have ‘struct List’)
      list->head=NULL;
          ^~
list.c:33:10: error: invalid type argument of ‘->’ (have ‘struct List’)
      list->tail=NULL;
          ^~
list.c:34:10: error: invalid type argument of ‘->’ (have ‘struct List’)
      list->current=NULL;
          ^~
list.c:35:13: error: incompatible types when returning type ‘struct List’ but ‘List * {aka struct List *}’ was expected
      return list;
             ^~~~
list.c:36:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
Tue Mar 30 16:37:24 UTC 2021: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:32:10: error: invalid type argument of ‘->’ (have ‘struct List’)
      list->head=NULL;
          ^~
list.c:33:10: error: invalid type argument of ‘->’ (have ‘struct List’)
      list->tail=NULL;
          ^~
list.c:34:10: error: invalid type argument of ‘->’ (have ‘struct List’)
      list->current=NULL;
          ^~
list.c:35:13: error: incompatible types when returning type ‘struct List’ but ‘List * {aka struct List *}’ was expected
      return list;
             ^~~~
list.c:36:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
Tue Mar 30 16:37:28 UTC 2021: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:32:6: error: ‘list’ undeclared (first use in this function); did you mean ‘List’?
      list->head=NULL;
      ^~~~
      List
list.c:32:6: note: each undeclared identifier is reported only once for each function it appears in
list.c:36:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
Tue Mar 30 16:37:42 UTC 2021: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:32:10: error: expected identifier or ‘(’ before ‘->’ token
      List->head=NULL;
          ^~
list.c:33:10: error: expected identifier or ‘(’ before ‘->’ token
      List->tail=NULL;
          ^~
list.c:34:10: error: expected identifier or ‘(’ before ‘->’ token
      List->current=NULL;
          ^~
list.c:35:13: error: expected expression before ‘List’
      return List;
             ^~~~
list.c:36:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
Tue Mar 30 16:38:33 UTC 2021: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:33:10: error: expected identifier or ‘(’ before ‘->’ token
      List->head=NULL;
          ^~
list.c:34:10: error: expected identifier or ‘(’ before ‘->’ token
      List->tail=NULL;
          ^~
list.c:35:10: error: expected identifier or ‘(’ before ‘->’ token
      List->current=NULL;
          ^~
list.c:37:13: error: expected expression before ‘List’
      return List;
             ^~~~
list.c:38:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
Tue Mar 30 16:38:34 UTC 2021: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:33:10: error: expected identifier or ‘(’ before ‘->’ token
      List->head=NULL;
          ^~
list.c:34:10: error: expected identifier or ‘(’ before ‘->’ token
      List->tail=NULL;
          ^~
list.c:35:10: error: expected identifier or ‘(’ before ‘->’ token
      List->current=NULL;
          ^~
list.c:37:13: error: expected expression before ‘List’
      return List;
             ^~~~
list.c:38:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
Tue Mar 30 16:41:38 UTC 2021: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:32:10: error: expected identifier or ‘(’ before ‘->’ token
      List->head=NULL;
          ^~
list.c:33:10: error: expected identifier or ‘(’ before ‘->’ token
      List->tail=NULL;
          ^~
list.c:34:10: error: expected identifier or ‘(’ before ‘->’ token
      List->current=NULL;
          ^~
Compilation failed
Tue Mar 30 16:55:46 UTC 2021: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:32:7: error: expected identifier or ‘(’ before ‘=’ token
   List=(List*)malloc(sizeof(List))
       ^
list.c:34:10: error: expected identifier or ‘(’ before ‘->’ token
      List->tail=NULL;
          ^~
list.c:35:10: error: expected identifier or ‘(’ before ‘->’ token
      List->current=NULL;
          ^~
Compilation failed
Tue Mar 30 16:55:51 UTC 2021: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:32:7: error: expected identifier or ‘(’ before ‘=’ token
   List=(List*)malloc(sizeof(List));
       ^
list.c:33:10: error: expected identifier or ‘(’ before ‘->’ token
      List->head=NULL;
          ^~
list.c:34:10: error: expected identifier or ‘(’ before ‘->’ token
      List->tail=NULL;
          ^~
list.c:35:10: error: expected identifier or ‘(’ before ‘->’ token
      List->current=NULL;
          ^~
Compilation failed
Tue Mar 30 16:55:54 UTC 2021: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:32:7: error: expected identifier or ‘(’ before ‘=’ token
   List=(List*)malloc(sizeof(List));
       ^
list.c:33:10: error: expected identifier or ‘(’ before ‘->’ token
      List->head=NULL;
          ^~
list.c:34:10: error: expected identifier or ‘(’ before ‘->’ token
      List->tail=NULL;
          ^~
list.c:35:10: error: expected identifier or ‘(’ before ‘->’ token
      List->current=NULL;
          ^~
Compilation failed
Tue Mar 30 17:14:42 UTC 2021: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
fbc4f99
Tue Mar 30 17:20:55 UTC 2021: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
ffdae79
Tue Mar 30 17:21:50 UTC 2021: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
f78bf69
Tue Mar 30 17:23:42 UTC 2021: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
49351b4
Tue Mar 30 17:25:11 UTC 2021: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
960b214
Tue Mar 30 17:25:54 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8e2c6b7
Tue Mar 30 17:29:09 UTC 2021: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
44fc998
Tue Mar 30 17:31:30 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
fd3a745
Tue Mar 30 17:32:02 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
5ca37ab
Tue Mar 30 17:44:34 UTC 2021: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  6|4
total_score: 25/70
739f558
Tue Mar 30 17:45:09 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
bc03cb9
Tue Mar 30 17:45:43 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
3b87615
Tue Mar 30 17:48:19 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
4ef6634
Tue Mar 30 17:48:27 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
b0c12ad
Tue Mar 30 17:48:52 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
d5ef0d8
Tue Mar 30 18:14:54 UTC 2021: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  0|0
f73f221
Tue Mar 30 18:16:31 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1c4f179
Tue Mar 30 18:25:49 UTC 2021: 
 list.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  9|3
total_score: 35/70
bdd0391
Tue Mar 30 18:34:36 UTC 2021: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
18f3a22
Tue Mar 30 19:58:53 UTC 2021: 
 list.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  10|2
total_score: 45/70
36658f7
